force-app/main/default/objects/Risk_Assessment__c/Risk_Assessment__c.object-meta.xml
<CustomObject>
    <label>Risk Assessment</label>
    <nameField>
        <displayFormat>RSK-{00000}</displayFormat>
        <label>Risk Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>