force-app/main/default/objects/Risk_Assessment__c/fields/Active_Loans__c.field-meta.xml
<CustomField>
    <fullName>Active_Loans__c</fullName>
    <label>Active Loans</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>