force-app/main/default/objects/Risk_Assessment__c/fields/Address_Risk__c.field-meta.xml
<CustomField>
    <fullName>Address_Risk__c</fullName>
    <label>Address Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Low</fullName>
        </value>
        <value>
            <fullName>Medium</fullName>
        </value>
        <value>
            <fullName>High</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>