force-app/main/default/objects/Risk_Assessment__c/fields/Bureau_Score__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Score__c</fullName>
    <label>Bureau Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>