force-app/main/default/objects/Risk_Assessment__c/fields/Bureau_Source__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Source__c</fullName>
    <label>Bureau Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>CIBIL</fullName>
        </value>
        <value>
            <fullName>Experian</fullName>
        </value>
        <value>
            <fullName>Equifax</fullName>
        </value>
        <value>
            <fullName>CRIF</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>