force-app/main/default/objects/Risk_Assessment__c/fields/Credit_Inquiries_6M__c.field-meta.xml
<CustomField>
    <fullName>Credit_Inquiries_6M__c</fullName>
    <label>Credit Inquiries 6M</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>