force-app/main/default/objects/Risk_Assessment__c/fields/Final_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Risk_Score__c</fullName>
    <label>Final Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>