force-app/main/default/objects/Risk_Assessment__c/fields/Identity_Verified__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verified__c</fullName>
    <label>Identity Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>