force-app/main/default/objects/Risk_Assessment__c/fields/Past_Bounces_12M__c.field-meta.xml
<CustomField>
    <fullName>Past_Bounces_12M__c</fullName>
    <label>Past Bounces 12M</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>