force-app/main/default/objects/Risk_Assessment__c/fields/Past_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Past_Defaults__c</fullName>
    <label>Past Defaults</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>