force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reasons__c</fullName>
    <label>Risk Reasons</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>